--- a/app/src/main/res/layout/activity_add_hospital.xml
+++ b/app/src/main/res/layout/activity_add_hospital.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Reg">
+    tools:context=".admin.Reg">
     <EditText
         android:id="@+id/hsp_name"
         android:layout_width="0dp"
