--- a/app/src/main/res/layout/fragment_hospital.xml
+++ b/app/src/main/res/layout/fragment_hospital.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#F4E7E7"
+    android:layout_marginTop="10dp"
     android:orientation="vertical">
 
     <TextView
