--- a/app/src/main/res/layout/fragment_hospital_list.xml
+++ b/app/src/main/res/layout/fragment_hospital_list.xml
@@ -4,11 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".admin.HospitalFragment"
+    android:paddingTop="80dp"
+    android:layout_margin="10dp"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list"
+        android:id="@+id/list_hospital_recycler"
         android:name="com.example.myapplication.admin.HospitalFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,6 +19,13 @@
         app:layoutManager="LinearLayoutManager"
 
         tools:listitem="@layout/fragment_hospital" />
+
+    <TextView
+        android:id="@+id/nothing_loaded_hospital"
+        android:textAlignment="center"
+        android:text="Hospitals not loaded or empty."
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
