--- a/app/src/main/res/layout/fragment_hospital.xml
+++ b/app/src/main/res/layout/fragment_hospital.xml
@@ -12,6 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
+        android:ellipsize="end"
+        android:maxLines="1"
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
         android:layout_margin="5dp"
         android:textAppearance="?attr/textAppearanceListItem" />
@@ -30,6 +32,8 @@
         android:id="@+id/services_offered_count"
         android:text="9 Services"
         android:textSize="13sp"
+        android:ellipsize="end"
+        android:maxLines="1"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
