--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_facilities_list"
-        android:orderInCategory="100"
-        android:title="Facilities"
-        android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/action_facilities_search"
+        android:icon="@android:drawable/ic_search_category_default"
+        android:title="Search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView"/>
     <item
         android:id="@+id/action_help"
         android:icon="@android:drawable/ic_menu_help"
